--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,20 @@
-.App {
-  padding: 30px;
-  display: flex;
-}
+/*.App {*/
+/*  padding: 30px;*/
+/*  display: flex;*/
+/*}*/
 
-.App > div {
-  margin-right: 50px;
-}
+/*.App > div {*/
+/*  margin-right: 50px;*/
+/*}*/
 
 .todolist {
+
   border: 2px solid hotpink;
   border-radius: 5px;
   padding: 20px;
-  background-color: #f2f2f2 ;
+ 
+  /*background-color: #f2f2f2 ;*/
+
 
 }
 
@@ -43,9 +46,17 @@
 .filter-btn-container {
   display: flex;
   justify-content: space-between;
+  gap: 5px;
 }
 
 .input-error {
   border: 2px solid red;
   outline: none;
+}
+
+.h3 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
 }
